<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.sqlg</groupId>
    <artifactId>sqlgfx</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <sqlg.version>3.1.0-SNAPSHOT</sqlg.version>
        <jfx.version>22-ea+16</jfx.version>
        <controlsfx.version>11.2.1</controlsfx.version>
        <antlr4.version>4.9.1</antlr4.version>
        <log4j.version>2.19.0</log4j.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${jfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.11.2</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>io.github.mkpaz</groupId>-->
        <!--            <artifactId>atlantafx-base</artifactId>-->
        <!--            <version>2.0.1</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>net.synedra</groupId>
            <artifactId>validatorfx</artifactId>
            <version>0.4.2</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.umlg</groupId>
            <artifactId>sqlg-c3p0</artifactId>
            <version>${sqlg.version}</version>
        </dependency>
        <dependency>
            <groupId>org.umlg</groupId>
            <artifactId>sqlg-postgres-dialect</artifactId>
            <version>${sqlg.version}</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr4.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>org.sqlg.ui.App</mainClass>
                            <options>
                                <option>--enable-preview</option>
                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                                <option>--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.sqlg.ui.FXAppLauncher</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
